fixing dinkus spacing

--- a/_manuscript-core.css
+++ b/_manuscript-core.css
@@ -531,12 +531,14 @@ html, body { background-color: rgb(0 0 0 / 0); }
 #manuscript section.m-scene:not(.hide-dinkus):not(.no-dinkus)::after {
     content: var(--m-dinkus);
     white-space: pre-wrap; /* enables funtional escaping in the escaping */
-    line-height: var(--m-line-spacing-single-plus);
+    line-height: var(--m-line-spacing-single);
+    margin-top: var(--m-elbow-room);
 }
 #manuscript section.m-scene.hide-dinkus::after {
     /*content: "\00A0"; / * &nbps; */
     content: "\200B"; /* &zerowidthspace */
-    line-height: var(--m-line-spacing-single-plus);
+    line-height: var(--m-line-spacing-single);
+    margin-top: var(--m-elbow-room);
 }
 #manuscript section.m-scene.no-dinkus::after {
     /* there will be a small separation between scenes */
